--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: ams-web
     ports:
-      - "8080:80"
+      - "8080:80"                   # เว็บ PHP เปิดที่ :8080
     environment:
       - DB_HOST=db
       - DB_USER=labuser
@@ -14,6 +14,7 @@ services:
       - ./src:/var/www/html
     depends_on:
       - db
+    restart: unless-stopped
 
   db:
     image: mariadb:10.11
@@ -26,14 +27,20 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./db-init:/docker-entrypoint-initdb.d
+    # ลบ ports:3306 ออก เพื่อไม่ชนกับโปรเจกต์อื่น และปลอดภัยกว่า
+    restart: unless-stopped
 
   adminer:
     image: adminer
     container_name: ams-adminer
-    restart: unless-stopped
+    environment:
+      ADMINER_DEFAULT_SERVER: db
+    # ผูกเฉพาะ localhost และย้ายเป็น 9081 เพื่อไม่ชนโปรเจกต์ 2
     ports:
-      - "8081:8080"
+      - "127.0.0.1:9081:8080"
     depends_on:
       - db
+    restart: unless-stopped
+
 volumes:
   db_data:
